--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -89,14 +89,14 @@ env:
 # Font configuration
 font:
   # Normal (roman) font face
-  normal:
+  # normal:
     # Font family
     #
     # Default:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: DejavuSansMono Nerd Font
+    # family: DejavuSansMono Nerd Font
     #family: DejaVu Sans Mono
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -135,7 +135,7 @@ font:
     #style: Bold Italic
 
   # Point size
-  size: 10.0
+  size: 11.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
