--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -11,7 +11,7 @@ unredir-if-possible = true;
 glx-no-stencil = true;
 glx-use-copysubbuffermesa = true;
 glx-no-rebind-pixmap = true;
-
+vsync="opengl"
 
 # Shadow
 shadow = true;
