--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -64,6 +64,9 @@ blur-strength = 15;                    # Strenth of kawase blur [1; 20]
 opacity-rule = [ 
     "70:class_g = 'Rofi'",
     "90:class_g = 'Alacritty'",
-    "70:class_g = 'code'"
-    #"10:class_g = 'polybar'"
+    "70:class_g = 'code'",
+]
+
+blur-background-exclude = [
+    "class_g = 'awesome'"
 ]
