--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -65,8 +65,5 @@ opacity-rule = [
     "70:class_g = 'Rofi'",
     "90:class_g = 'Alacritty'",
     "70:class_g = 'code'",
-]
-
-blur-background-exclude = [
-    "class_g = 'awesome'"
+    "100:class_g = 'awesome'"
 ]
